--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,81 @@
-.button_issue {
-  background-color: green;
-
-  color: white;
-  width: 100px;
-  height: 70px;
-
+body {
+  height: 100vh;
+  width: 100vw;
 }
 
-.button_subject {
-  background-color: teal;
-  position: relative;
-  color: white;
-  width: 100px;
-  height: 70px;
-  vertical-align: middle; 
+/* search bar */
+header {
+  background-color: initial;
+  height: 12%;
+}
 
+.search-ui {
+  float: left;
+  margin-left: 25px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+/* Style the search box inside the navigation bar */
+input[type=text] {
+    width: 150px;
+    height: 60%;
+    margin: 20px;
+    border: none;
+    font-size: 25px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+    width: 75%;
+}
+/* end search */
+
+section {
+  background-color: yellow;
+  height: 40%;
+}
+
+.discover {
+  background-image: url(images/pencils.jpg);
+  background-repeat: repeat-x;
+  background-size: contain;
+  width: 100%;
+  height: 45%;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+}
+
+.discover h3 {
+  font-size: 30px;
+  color: black;
+  padding: 35px;
+  font-weight: bold;
+}
+
+.discover a {
+  text-decoration: none;
+  color: white;
+  font-size: 25px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+}
+
+.discover button {
+  width: 250px;
+  height: 80px;
+  border: none;
+  margin: 18px;
+}
+
+.b-issue {
+  background-color: RGB(103,217,143);
+}
+
+.b-subject {
+  background-color: RGB(101,161,216);
 }
