--- a/education_site/content/static/content/resultstyle.css
+++ b/education_site/content/static/content/resultstyle.css
@@ -3,38 +3,72 @@ body {
   width: 100vw;
 }
 
+/* search bar */
 header {
-    background-color: black;
-    height: 12%;
+  background-color: initial;
+  height: 12%;
 }
 
+.search-ui {
+  float: left;
+  margin-left: 25px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+/* Style the search box inside the navigation bar */
+input[type=text] {
+    width: 150px;
+    height: 60%;
+    margin: 20px;
+    border: none;
+    font-size: 25px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+    width: 75%;
+}
+/* end search */
+
 /***** Portfolio Page *****/
-.search-results {
+.searchresults {
   width: 80%;
   margin: auto;
 }
 
-.search-results h1 {
+.searchresults h1 {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+  font-size: 35px;
+  padding: 16px;
+  background-color: rgb(101,161,216);
 }
 
 .content {
   width: 100%;
   flex-direction: row;
   display: grid;
-  /* width: 95%; */
-  grid-template-columns: 11, 1fr;
+  grid-template-columns: 2, 1fr;
+  grid-template-rows: 3, 1fr;
   grid-row-gap: 15px;
   grid-column-gap: 15px;
-  padding: 10px;
   margin: auto;
-  background-color: rgba(150, 150, 150, .5);
 }
+
+.content h2 {
+    position: absolute;
+    top: 50%;
+    padding: 20px;
+    background-color: rgba(255,255,255,0.7);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+ }
 
 #item1 {
   grid-row: 1;
-  grid-column: 2/4;
+  grid-column: 1;
   padding: 8px;
 }
 
@@ -42,30 +76,38 @@ header {
   grid-row: 1;
   grid-column: 2;
   padding: 8px;
-  m
 }
+
+/* .content2 h2 {
+    position: absolute;
+    top: 70%;
+    padding: 20px;
+    background-color: rgba(255,255,255,0.7);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+ } */
 
 #item3 {
-  grid-row: 1;
-  grid-column: 3;
-  padding: 8px;
-}
-
-#item4 {
   grid-row: 2;
   grid-column: 1;
   padding: 8px;
 }
 
-#item5 {
+#item4 {
   grid-row: 2;
   grid-column: 2;
   padding: 8px;
 }
 
+#item5 {
+  grid-row: 3;
+  grid-column: 1;
+  padding: 8px;
+}
+
 #item6 {
-  grid-row: 2;
-  grid-column: 3;
+  grid-row: 3;
+  grid-column: 2;
   padding: 8px;
   transform-origin: left;
 }
